<resources>
	<string name="app_version">1.0.4</string>
	<string-array name="target_mcpe_versions">
		<item>1.1.0.8</item>
		<item>1.1.0.9</item>
	</string-array>
	<string name="target_mcpe_version_info">1.1.0.[8/9]</string>
	<string name="menu_title">Menu</string>
	<string name="error_title">:( Something has broken...</string>
	<string name="manage_nmod_title">Manage NMods</string>
	<string name="settings_title">Settings</string>
	<string name="about_title">About</string>
	<string name="main_title">Home Page</string>
	<string name="nmod_loadFailed">Load %1$s Failed!</string>
	<string name="load_fail_msg">Load Error:</string>
	<string name="load_fail_description">NMod load failed,but the game still can run.</string>
	<string name="nmod_load_failed">Failed to load NMod.</string>
	<string name="nmod_add_new">Add New</string>
	<string name="nmod_add_new_title">Add New...</string>
	<string name="nmod_add_new_message">Where do you want to pick NMod from?</string>
	<string name="nmod_add_new_pick_installed">Installed</string>
	<string name="nmod_add_new_pick_storage">External storage</string>
	<string name="load_exception_bad_jni_return_value">Bad return value in method JNI_OnLoad!</string>
	<string name="load_exception_bad_jni_return_value_d">Please create method JNI_OnLoad and return JNI_VERSION value in it!</string>
	<string name="load_exception_bad_manifest_syntax">An error caused in loading nmod_manifest.json.</string>
	<string name="load_exception_bad_manifest_syntax_d">Please check if there is a syntax mistake in nmod_manifest.json.</string>
	<string name="load_exception_bad_json_syntax">An error caused in loading %1$s.</string>
	<string name="load_exception_bad_json_syntax_d">Please check if there is a mistake in %1$s.</string>
	<string name="load_exception_symbol_not_found">Cannot locate symbol %1$s[%2$s].</string>
	<string name="load_exception_symbol_not_found_d">Please create symbol %1$s[%2$s].</string>
	<string name="load_exception_file_not_found">Cannot open file:%1$s.</string>
	<string name="load_exception_file_not_found_d">Please check if %1$s is existed.</string>
	<string name="load_exception_dlopen_fail">Dlopen failed:%1$s.</string>
	<string name="load_exception_dlopen_fail_d">Please add native lib %1$s and register it in native_libs (in nmod_manifest.json) before %2$s.</string>
	<string name="load_exception_native_lib_not_found">Cannot found native lib: %1$s.</string>
	<string name="load_exception_native_lib_not_found_d">Please add native lib: %1$s.</string>
	<string name="load_exception_image_decode">Decoding image failed: %1$s.</string>
	<string name="load_exception_image_decode_d">Please make sure if the image is valid: %1$s.</string>
	<string name="load_exception_unknow">UNKNOW.</string>
	<string name="load_exception_unknow_d">UNKNOW.</string>
	<string name="load_exception_bad_image_size">Bad image size:description image should be 1024(width)*500(height).</string>
	<string name="load_exception_bad_image_size_d">Please change image size to 1024(width)*500(height).</string>
	<string name="load_fail_main">Error Description</string>
	<string name="load_fail_deal">How to Deal</string>
	<string name="load_fail_all">Full Description</string>
	<string name="load_fail_warning">An error was caused by the NMod %1$s.The NMod is disabled now,you can continue to enjoy the game!</string>
	<string name="nmod_description_description_title">Description</string>
	<string name="nmod_description_about_title">About</string>
	<string name="nmod_description_about_author">Author:</string>
	<string name="nmod_description_about_version_name">Version Name:</string>
	<string name="nmod_description_unknow">Unknow</string>
	<string name="about_copyright">Copyright</string>
	<string name="about_license">Licenses</string>
	<string name="settings_autoSaveLevel">Auto Save Level</string>
	<string name="settings_leftHandEverything">Hold Everything in Left Hand</string>
	<string name="settings_safetyMode">Safe Mode</string>
	<string name="settings_eduUI">Education UI</string>
	<string name="settings_hideDebugText">Hide Debug Text</string>
	<string name="settings_redstoneDot">Restone Dot</string>
	<string name="settings_customFlatWorldLayers">Custom Flat World Layers</string>
	<string name="settings_disableTextureIsotropic">Disable Texture Isotropic</string>
	<string name="opengame_loading_blocks_message">One block,two blocks,three blocks…</string>
	<string name="opengame_loading">Loading</string>
	<string name="main_play">Play</string>
	<string name="main_default_minecraft_title">MinecraftPE : Default</string>
	<string name="no_available_mcpe_version_found">ModdedPE has found a unsupported version of Minecraft:PE (%1$s) on this device.(ModdedPE only supports %2$s!)If you continue to open the game,ModdedPE may crash or cause issues.</string>
	<string name="no_available_mcpe_version_found_title">Unsupported Version of Minecraft:PE</string>
	<string name="no_available_mcpe_version_continue">Continue</string>
	<string name="no_available_mcpe_version_cancel">Cancel</string>
	<string name="no_mcpe_found">ModdedPE is a launcher of Minecraft:PE,but we haven\'t find Minecraft:PE(Made by Mojang) on this device.</string>
	<string name="no_mcpe_found_title">Minecraft:PE not found.</string>
	<string name="no_mcpe_found_cancel">Cancel</string>
	<string name="start_warning_xposed_title">Warning</string>
	<string name="start_warning_xposed_message">We have found Xposed on this device.ModdedPE may not work with Xposed Framework on.Please make sure you have disabled Xposed Framework.</string>
	<string name="start_warning_xposed_continue">Continue</string>
	<string name="start_warning_xposed_do_not_show_again">Don\'t show this again!</string>
	<string name="error_restart_app">Restart</string>
	<string name="error_text">This may caused by an unsupported version or a mistake of codes.Send the report to the developer to fix it.</string>
	<string name="app_name">ModdedPE</string>
    <string name="app_name_demo">ModdedPE Demo</string>
    <string name="app_name_short">ModdedPE</string>
    <string name="app_name_short_demo">ModdedPE Demo</string>
	<string name="manage_nmod_no_nmod_found">We haven\'t found any NMod on this device.</string>
	<string name="manage_nmod_install_nmod">Please install them(*.apk) and restart ModdedPE!</string>
	<string name="com_facebook_like_button_not_liked">Like</string>
    <string name="com_facebook_like_button_liked">Liked</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_log_in_button">Log in</string>
    <string name="com_facebook_loginview_log_in_button_long">Log in with Facebook</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_loading">Loading...</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_tooltip_default">New! You\&apos;re in control - choose what info you want to share with apps.</string>
    <string name="com_facebook_image_download_unknown_error">Unexpected error while downloading an image.</string>
    <string name="com_facebook_share_button_text">Share</string>
    <string name="com_facebook_send_button_text">Send</string>
    <string name="com_facebook_device_auth_instructions">Visit \&lt;b\&gt;facebook.com/device\&lt;/b\&gt;\&lt;br /\&gt;on your smartphone or computer\&lt;br /\&gt;and enter this code</string>
    <string name="account_menu_add_account">Add an account</string>
    <string name="account_picker_list_body">Which account do you want to sign in to this app with?</string>
    <string name="account_picker_list_header">Choose one</string>
    <string name="account_picker_menu_dismiss">Close</string>
    <string name="account_setting_up">Please wait while we finish adding your account.</string>
    <string name="account_setting_up_header">You\&apos;re almost done</string>
    <string name="app_market">en-US</string>
    <string name="authentication_button_finish">finish</string>
    <string name="authentication_button_next">next</string>
    <string name="authentication_button_previous">previous</string>
    <string name="error_body_generic_failure">Please try again.</string>
    <string name="error_header_generic_failure">Something went wrong</string>
    <string name="error_header_server_network_error">We are having problems connecting to the server</string>
    <string name="error_overlay_no_network">You have no internet connection</string>
    <string name="sign_out_dialog_button_cancel">Cancel</string>
    <string name="sign_out_dialog_button_sign_out">Sign out</string>
    <string name="sign_out_dialog_checkbox">Sign out of all Microsoft apps using %1$s</string>
    <string name="sign_out_dialog_title">Do you want to sign out of this app?</string>
    <string name="user_tile_image_content_description">The user\&apos;s image.</string>
    <string name="webflow_header">Microsoft account</string>
    <string name="sdk_version_name">2.1.0504.0524</string>
    <string name="xbid_ban_error_header_android">Hi, %1$s.</string>
    <string name="xbid_ban_error_body_android">We can\&apos;t sign you in because your account has been suspended from Xbox Live.</string>
    <string name="xbid_creation_error_android">Sorry, we couldn\&apos;t complete your Xbox profile. If it happens again, try setting it up at \&lt;u\&gt;Xbox.com\&lt;/u\&gt;</string>
    <string name="xbid_catchall_error_android">Sorry, something went wrong. Give it another try, or try on \&lt;u\&gt;Xbox.com\&lt;/u\&gt;</string>
    <string name="xbid_error_offline_android">Make sure you\&apos;re online, then try again. We can\&apos;t connect right now.</string>
    <string name="xbid_close">Close</string>
    <string name="xbid_try_again">Try again</string>
    <string name="xbid_more_info">More info</string>
    <string name="xbid_sign_up_header">Welcome to Xbox</string>
    <string name="xbid_sign_up_subheader_android">Here\&apos;s your name on Xbox (or \&quot;gamertag\&quot;). Change it if you want!</string>
    <string name="xbid_gamertag_placeholder">Gamertag</string>
    <string name="xbid_privacy_settings_header_android">Privacy settings: %1$s</string>
    <string name="xbid_age_group_adult">Adult default</string>
    <string name="xbid_age_group_teen">Teen default</string>
    <string name="xbid_age_group_child">Child default</string>
    <string name="xbid_age_group_adult_details_android">Your friends and their friends can see if you\&apos;re online, your game clips, and your recent apps and games. You can change these on \&lt;u\&gt;Xbox.com\&lt;/u\&gt;</string>
    <string name="xbid_age_group_teen_details_android">Your Xbox friends and their friends can see your real name and your profile. Your Xbox friends can see if you\&apos;re online, your game clips, and your recent apps and games</string>
    <string name="xbid_age_group_child_details_android">Your Xbox friends can see your profile, but not your real name. Friends and their friends can see if you\&apos;re online and available to play, but you\&apos;ll need a parent\&apos;s permission to add friends</string>
    <string name="xbid_next">Next</string>
    <string name="xbid_claim_it">Claim it!</string>
    <string name="xbid_another_gamertag">Already have a gamertag?</string>
    <string name="xbid_another_sign_in">Sign in with a different Microsoft account</string>
    <string name="xbid_gamertag_check_availability">Check availability</string>
    <string name="xbid_gamertag_not_available_android">That\&apos;s taken. How about:</string>
</resources>