<?xml version="1.0" encoding="utf-8"?>
<com.mcal.MCDesign.widget.MCDActionBarView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">

	<RelativeLayout
		android:layout_height="30dp"
		android:layout_width="30dp"
		android:layout_alignParentRight="true"
		android:layout_marginRight="10dp"
		android:layout_centerVertical="true"
		android:id="@+id/moddedpe_menu_actionbar_ViewRight"/>

	<LinearLayout
		android:layout_height="45dp"
		android:layout_width="wrap_content"
		android:orientation="horizontal"
		android:layout_centerInParent="true">

		<com.mcal.MCDesign.widget.MCDBorderButton
			android:layout_height="match_parent"
			android:layout_width="wrap_content"
			android:id="@+id/moddedpe_menu_actionbar_main"
			android:text="@string/main_title"
			android:layout_marginRight="5dp"
			android:layout_marginLeft="5dp"/>

		<com.mcal.MCDesign.widget.MCDBorderButton
			android:layout_height="match_parent"
			android:layout_width="wrap_content"
			android:id="@+id/moddedpe_menu_actionbar_manage_nmod"
			android:text="@string/manage_nmod_title"
			android:layout_marginRight="5dp"
			android:layout_marginLeft="5dp"/>

		<com.mcal.MCDesign.widget.MCDBorderButton
			android:layout_height="match_parent"
			android:layout_width="wrap_content"
			android:id="@+id/moddedpe_menu_actionbar_settings"
			android:text="@string/settings_title"
			android:layout_marginRight="5dp"
			android:layout_marginLeft="5dp"/>

	</LinearLayout>

</com.mcal.MCDesign.widget.MCDActionBarView>

