<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">

	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:orientation="vertical">

			<ImageView
				android:layout_height="wrap_content"
				android:layout_width="match_parent"
				android:src="@drawable/ic_launcher"
				android:layout_margin="30dp"/>

			<TextView
				android:layout_height="wrap_content"
				android:textAppearance="?android:attr/textAppearanceLarge"
				android:layout_width="match_parent"
				android:text="@string/app_name"
				android:layout_marginLeft="15dp"
				android:layout_marginRight="15dp"
				android:gravity="center"/>

			<TextView
				android:layout_height="wrap_content"
				android:textAppearance="?android:attr/textAppearanceMedium"
				android:layout_width="match_parent"
				android:text="Copyright © MCAL Team,Nextdev"
				android:layout_marginLeft="15dp"
				android:layout_marginRight="15dp"
				android:gravity="center"/>

			<TextView
				android:layout_height="wrap_content"
				android:textAppearance="?android:attr/textAppearanceMedium"
				android:layout_width="match_parent"
				android:text="MADE BY ModelPart"
				android:layout_marginLeft="15dp"
				android:layout_marginRight="15dp"
				android:gravity="center"/>

			<RelativeLayout
				android:layout_width="match_parent"
				android:orientation="horizontal"
				android:layout_height="wrap_content">

				<TextView
					android:layout_height="wrap_content"
					android:textAppearance="?android:attr/textAppearanceSmall"
					android:layout_width="wrap_content"
					android:text="@string/about_copyright"
					android:id="@+id/moddedpenmodAboutTextViewAboutTitle"
					android:layout_marginLeft="10dp"/>

				<View
					android:layout_width="match_parent"
					android:layout_height="1dp"
					android:background="#6E6E6E"
					android:layout_centerVertical="true"
					android:layout_marginLeft="5dp"
					android:layout_toRightOf="@id/moddedpenmodAboutTextViewAboutTitle"/>

			</RelativeLayout>

			<TextView
				android:layout_height="wrap_content"
				android:textAppearance="?android:attr/textAppearanceSmall"
				android:layout_width="match_parent"
				android:text="Copyright © 2016-2017 MCAL Team"
				android:layout_marginLeft="10dp"
				android:layout_marginRight="10dp"
				android:gravity="center"
				android:singleLine="true"/>

			<TextView
				android:layout_height="wrap_content"
				android:textAppearance="?android:attr/textAppearanceSmall"
				android:layout_width="match_parent"
				android:text="Made by ModelPart (Twitter:@model_part)"
				android:layout_marginLeft="10dp"
				android:layout_marginRight="10dp"
				android:gravity="center"
				android:singleLine="true"/>

			<TextView
				android:layout_height="wrap_content"
				android:textAppearance="?android:attr/textAppearanceSmall"
				android:layout_width="match_parent"
				android:text="https://github.com/MCAL-Team/ModdedPE"
				android:layout_marginLeft="10dp"
				android:layout_marginRight="10dp"
				android:gravity="center"
				android:singleLine="true"
				android:textIsSelectable="true"/>

			<RelativeLayout
				android:layout_width="match_parent"
				android:orientation="horizontal"
				android:layout_height="wrap_content">

				<TextView
					android:layout_height="wrap_content"
					android:textAppearance="?android:attr/textAppearanceSmall"
					android:layout_width="wrap_content"
					android:text="@string/about_license"
					android:id="@+id/moddedpenmodAboutTextViewLicenseTitle"
					android:layout_marginLeft="10dp"/>

				<View
					android:layout_width="match_parent"
					android:layout_height="1dp"
					android:background="#6E6E6E"
					android:layout_centerVertical="true"
					android:layout_marginLeft="5dp"
					android:layout_toRightOf="@id/moddedpenmodAboutTextViewLicenseTitle"/>

			</RelativeLayout>

			<TextView
				android:layout_height="wrap_content"
				android:textAppearance="?android:attr/textAppearanceSmall"
				android:layout_width="match_parent"
				android:text="Android Support v4 under Apache License 2.0."
				android:layout_marginLeft="10dp"
				android:layout_marginRight="10dp"
				android:gravity="center"
				android:singleLine="true"
				android:textIsSelectable="true"/>

			<TextView
				android:layout_height="wrap_content"
				android:textAppearance="?android:attr/textAppearanceSmall"
				android:layout_width="match_parent"
				android:text="Android Support v7 under Apache License 2.0."
				android:layout_marginLeft="10dp"
				android:layout_marginRight="10dp"
				android:gravity="center"
				android:singleLine="true"
				android:textIsSelectable="true"/>

			<TextView
				android:layout_height="wrap_content"
				android:textAppearance="?android:attr/textAppearanceSmall"
				android:layout_width="match_parent"
				android:text="Support Design under Apache License 2.0."
				android:layout_marginLeft="10dp"
				android:layout_marginRight="10dp"
				android:gravity="center"
				android:singleLine="true"
				android:textIsSelectable="true"/>

			<TextView
				android:layout_height="wrap_content"
				android:textAppearance="?android:attr/textAppearanceSmall"
				android:layout_width="match_parent"
				android:text="CardView under Apache License 2.0."
				android:layout_marginLeft="10dp"
				android:layout_marginRight="10dp"
				android:gravity="center"
				android:singleLine="true"
				android:textIsSelectable="true"/>

		</LinearLayout>

	</ScrollView>

</RelativeLayout>

